--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "sourceFolders": [
       "solutions/Day1",
-      "solutions/Day2"
+      "solutions/Day2",
+      "solutions/Day3"
     ]
 }
